update header instantiation

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <article class="container">
-  <%= header title: @about.title, separator: true, links: [link_to(:Home, root_path)] %>
+  <%= header title: @about.title, links: @links %>
   
   <main">
     <section class="row">
