--- a/app/views/layouts/_success_message.html.erb
+++ b/app/views/layouts/_success_message.html.erb
@@ -1,5 +1,6 @@
 <% if flash[:success] %>
   <div class="alert alert-dismissible alert-success">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
     <%= flash[:success] %>
   </div>
 <% end %>
