add error messages

--- a/app/views/abouts/_form.html.erb
+++ b/app/views/abouts/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with model: @about do |f| %>
+  <%= render "layouts/error_messages", obj: @about %>
+
   <section class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: "form-control" %>
