--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,8 +1,10 @@
-<div class="alert alert-dismissible alert-danger">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong>Oh snap! <%= flash[:error]%></strong>
-  <hr />
-  <% obj.errors.each do |error|  %>
-    <%= error.full_message %>
-  <% end %>
-</div>
+<% if obj.errors.any? %>
+  <div class="alert alert-dismissible alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Oh snap! <%= flash[:error]%></strong>
+    <hr />
+    <% obj.errors.each do |error|  %>
+      <%= error.full_message %>
+    <% end %>
+  </div>
+<% end %>
