add placeholder image

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,7 +9,7 @@
         </p>
       </section>
       <section class="col">
-        <%= image_tag Faker::Placeholdit.image(size: '300x300', format: 'gif'), class: "img-thumbnail" %>
+        <%= image_tag "danny.png", class: "img-thumbnail" %>
       </section>
     </section>
   </main>
