--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/nav' %>
     <%= render 'layouts/info_messages' %>
     <%= render 'layouts/success_message' %>
     <%= yield %>
