--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
 @import "bootstrap/scss/bootstrap";
 @import "./actiontext.scss";
 @import "./flatly.min.css.scss";
+@import "./footer-distributed-with-contact-form.scss";
