--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,18 +17,15 @@
         <%= link_to :About, about_page_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
+        <%= link_to 'Contact Me', new_contact_me_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
         <% if user_signed_in? %>
           <%= link_to :Logout, destroy_user_session_path, method: :delete, class: 'nav-link' %>
         <% else %>
           <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
         <% end %>
       </li>
-      <%# <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li> %>
-      <%# <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li> %>
       <%# <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
         <div class="dropdown-menu">
