--- a/app/views/layouts/_info_messages.html.erb
+++ b/app/views/layouts/_info_messages.html.erb
@@ -3,12 +3,12 @@
 <% if flash[:notice] %>
   <div class="alert alert-dismissible alert-info">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <h4 class="alert-heading">Notice!</h4>
+    <h4 class="alert-heading"><%= t('alert.notice') %></h4>
     <p class="mb-0"><%= flash[:notice] %></p>
   </div>
 <% elsif flash[:alert] %>
   <div class="alert alert-dismissible alert-warning">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>Alert</strong> <%= flash[:alert] %>
+    <strong><%= t('alert.alert') %></strong> <%= flash[:alert] %>
   </div>
 <% end %>
