add trix styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap/scss/bootstrap";
+@import "trix/dist/trix";
 @import "./actiontext.scss";
 @import "./flatly.min.css.scss";
 @import "./footer-distributed-with-contact-form.scss";
