change .jumbotron from fieldset to section

--- a/app/views/abouts/_form.html.erb
+++ b/app/views/abouts/_form.html.erb
@@ -8,9 +8,9 @@
 
   <fieldset class="form-group">
     <%= f.label :body %>
-    <fieldset class="jumbotron">
+    <section class="jumbotron">
       <%= f.rich_text_area :body%>
-    </fieldset>
+    </section>
   </fieldset>
 
   <section>
